--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^5.5.8",
+    "firebaseui": "^3.4.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-firebaseui": "^3.1.2",
     "react-scripts": "2.1.1"
   },
   "scripts": {
