--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "firebase": "^5.5.8",
     "firebaseui": "^3.4.1",
+    "node-sass": "^4.10.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-firebaseui": "^3.1.2",
