--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-firebaseui": "^3.1.2",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-table": "^6.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
